(lang dune 3.12)

(name ocaml)

(generate_opam_files true)

(source
 (github eshaanagg/advent-of-code-23))

(authors "EshaanAgg")

(maintainers "EshaanAgg")

(license MIT)

(documentation ../README.md)

(package
 (name ocaml)
 (synopsis "AOC 23 solutions")
 (description "Learning OCaml by solving Advent of Code 2023 problems")
 (depends ocaml dune)
 (tags
  (aoc 2023 "advent of code")
  )
)

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
